--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-day-picker": "^9.10.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.62.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.5.3",
     "react-router-dom": "^6.25.1",
     "react-swipeable": "^7.0.2",
