--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,6 +4,9 @@ name = "salonflow"
 # Data de compatibilidade com as funcionalidades do Workers
 compatibility_date = "2024-04-05"
 
+# --- ADICIONADO: Aponta para o arquivo principal do seu backend ---
+main = "src/worker/index.ts"
+
 # Configuração para servir o seu site estático (a pasta 'dist')
 [site]
 bucket = "./dist"
